<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="@dimen/_285sdp"
    android:layout_height="@dimen/_150sdp"
    android:layout_gravity="center"
    android:background="@drawable/delete_dialog"
    app:elevation="@dimen/_20sdp"
    android:elevation="@dimen/_20sdp">
<LinearLayout
    android:id="@+id/main1"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    app:layout_constraintTop_toTopOf="parent"
    android:orientation="vertical"
    android:textDirection="rtl"
    android:layoutDirection="rtl">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete"
        android:fontFamily="casual"
        android:layout_marginTop="@dimen/_10sdp"
        android:textStyle="bold"
        android:maxLines="1"
        android:textColor="#FFF"
        android:textSize="@dimen/_15ssp"
        android:layout_gravity="center"/>
</LinearLayout>
    <LinearLayout
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/main1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layoutDirection="rtl"
        android:textDirection="rtl"
        android:padding="@dimen/_20sdp">
        <com.google.android.material.button.MaterialButton
            android:id="@+id/yes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="@dimen/_10sdp"
            android:background="@drawable/btn_style1"
            app:backgroundTint="@null"
            android:text="@string/yes"
            android:textColor="#FFF"
            android:textSize="@dimen/_20ssp"
            android:textStyle="bold"
            app:elevation="@dimen/_20sdp"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="@dimen/_10sdp"
            android:background="@drawable/btn_style1"
            app:backgroundTint="@null"
            android:text="@string/no"
            android:textColor="#FFF"
            android:textSize="@dimen/_20ssp"
            android:textStyle="bold"
            app:elevation="@dimen/_20sdp"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>